# ExcellentEngine

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
ExcellentEngine/: Source.cpp
ExcellentEngine/Application/: Source.cpp  Utility.h  ui.h
ExcellentEngine/Math/: Vector.cpp  Vector.h
Math/Maths/: Vector.cpp
